syntax = "proto3";

package sisyphus.test;

import "google/protobuf/any.proto";

option java_package = "com.bybutter.sisyphus.test";
option objc_class_prefix = "SIS";

// 测试用例的 json 文件或者是 protobuf 的文件
message TestCase {
  // 通用请求头
  map<string, string> metadata = 1;

  // 服务测试 case
  repeated ServiceTestSet serviceTestSet = 2;
}

message ServiceTestSet {
  // 服务名字
  string service = 1;

  string authority = 2;

  // 在此次测试中覆盖和添加的请求头
  map<string, string> metadata = 3;

  // 关于服务的方法的测试 case
  repeated MethodTest methodTests = 4;
}

message MethodTest {
  // 给这个测试起名字
  string name = 1;

  // 打日志或者是显示的名字
  string title = 2;

  // 要测试的方法
  string method = 3;

  // 输入的参数
  google.protobuf.Any input = 4;

  // 在此次测试中覆盖的和添加的请求头
  map<string, string> metadata = 5;

  // 对测试结果的 assert
  repeated string asserts = 6;
}